Show notice where custom fields will be available after saving item

--- a/customize-nav-menu-item-custom-fields.css
+++ b/customize-nav-menu-item-custom-fields.css
@@ -1,4 +1,7 @@
-.custom-fields > .custom-fields-loading-message > .spinner {
+.menu-item-settings > .custom-fields {
+	clear:both;
+}
+.menu-item-settings > .custom-fields > .custom-fields-loading-message > .spinner {
 	visibility: visible;
 	margin: 0;
 }
